# domain-driven-design-user-management

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build.yml.inactive  main.yml  release.yml.inactive
alembic/: env.py
alembic/versions/: decacc61c183_.py  ed2029d7ce92_.py  f392e7b8445a_.py
alembic/versions.old.1/: 030b3b2c95dd_.py  10d6e99ea1ba_.py  3a6cd7a983d4_.py  3c825fac5bf3_.py  44b3f85dee45_.py  5e518686855c_.py  63c4d8a148fd_.py  7658bf817c7a_.py  827828c372f0_.py  8294d1ad672d_.py  b59e276f9590_.py  bf2df55e81d8_.py  d607443d4240_.py  d75e2f635756_.py  dbb1f6ce678b_.py  f7de6275c687_.py  fe190fe44af6_.py
saas/core/: config.py
saas/database/: metadata.py  session.py
saas/database/models/: __init__.py  enterprizes.py  events.py  posts.py  profiles.py  system_events.py
saas/domain/: base.py  mixins.py  services.py
saas/domain/events/: __init__.py  entities.py  repository.py  value_objects.py
saas/domain/exceptions/: events.py  (+3 more)
saas/service/: enterprize.py  event.py  exceptions.py  post.py  profile.py  registration.py
saas/web/: app.py  security.py  serializers.py  session.py
scripts/: create_random_data.py  create_superadmin.py  start.sh
tests/: conftest.py  repository.py
tests/test_domain/: test_events.py  test_posts.py  test_profiles.py
tests/test_service/: test_authentication_service.py  test_email.py  test_enterprize.py  test_event_service.py  test_password.py  test_post_service.py  test_profile_service.py
tests/test_web/: test_admin_users.py  test_authentication.py  test_registration.py  test_users.py
(+25 files in other folders)
